# excel-to-aasx

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  pytest.ini
configs/companies/: schunk.json
configs/formats/: idta-schunk-workbook.json  idta-workbook.json
docs/: README.md  architecture.md  limitations.md  quickstart.md  third-party.md
excel_to_aasx/: __init__.py  cli_output.py  collect_extraction.py  company_config.py  extract.py  io_utils.py  logging.py  matching.py  models.py  package.py  transform.py  validate.py  value_normalise.py
excel_to_aasx/core/: __init__.py  company_config.py  matching.py  models.py  value_normalise.py
excel_to_aasx/utils/: __init__.py  cli_output.py  io_utils.py  logging.py
scripts/: copy_templates.py
tests/: test_company_config.py  test_extract.py  test_integration.py  test_package.py  test_package_normalise.py  test_transform.py  test_validate.py  test_validate_submodel.py
